--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 
-	<link rel="stylesheet" href="static/styles.css">
+	
 
 	<!-- Google Analytics -->
 	<script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -48,6 +48,7 @@
 		<div id="title-block">
 			<h1>Hyperboloidal Motion</h1>
 			<h6>Fall 2011 | Harvard GSD | Instructor Cameron Wu</h6>	
+			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="50" data-slider-step="1" data-slider-value="30"/>
 
 
 		</div>
@@ -59,15 +60,16 @@
 	<div>
 	</div>
 
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/css/bootstrap-slider.min.css">
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/bootstrap-slider.min.js"></script>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="static/styles.css">
 
 	<script src="js/three.js"></script>
 	<script src="js/controls/OrbitControls.js"></script>
-	<script src='js/OBJLoader.js'></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
 	<script src='js/main.js'></script>
 
 </body>
