--- a/index.html
+++ b/index.html
@@ -44,13 +44,32 @@
 
 	</div>
 
+	<div id="sliders" class="noSelect">
+		<div class="sliderGroup">
+			<p class="sliderDesc">Number of Segments</p>
+			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="50" data-slider-step="1" data-slider-value="45" data-slider-id="S-seg"/>
+		</div>
+
+		<div class="sliderGroup">
+			<p class="sliderDesc">Top rotation</p>
+			<input id="ex2" data-slider-id='ex2Slider' type="text" data-slider-min="-180" data-slider-max="180" data-slider-step="1" data-slider-value="120" data-slider-id="S-rot"/>
+		</div>
+
+		<div class="sliderGroup">
+			<p class="sliderDesc">Offset</p>
+			<input id="ex3" data-slider-id='ex3Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="40" data-slider-id="S-Offset"/>
+		</div>
+	</div>
+
+	<div id="date">
+		<p id="crDate"><i>Copyright &#169  " + year + " Jim Peraino. All rights reserved.</i></p> 
+	</div>
+
 	<div id="interface" class="noSelect">
 		<div id="title-block">
 			<h1>Hyperboloidal Motion</h1>
-			<h6>Fall 2011 | Harvard GSD | Instructor Cameron Wu</h6>	
-			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="50" data-slider-step="1" data-slider-value="30"/>
-
-
+			<h6>Fall 2011 | Harvard GSD | Instructor Cameron Wu</h6>
+			<h6>In Progress: Refresh page to improve perfomance</h6>
 		</div>
 	</div>
 	
