center hyperboloid in screen on load

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  ga('send', 'pageview');
 	</script>
 
-	<title>Jim Peraino</title>
+	<title>Jim Peraino - Hyperboloidal Motion</title>
 </head>
 
 <body>
