fade in controls on load

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 	</div>
 
-	<div id="sliders" class="noSelect">
+	<div id="sliders" class="noSelect  fadeJ">
 		<div class="sliderGroup">
 			<p class="sliderDesc">Number of Segments</p>
 			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="50" data-slider-step="1" data-slider-value="45" data-slider-id="S-seg"/>
