add stair length and slider

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div id="sliders" class="noSelect  fadeJ">
 		<div class="sliderGroup">
 			<p class="sliderDesc">Number of Segments</p>
-			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="50" data-slider-step="1" data-slider-value="45" data-slider-id="S-seg"/>
+			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-slider-id="S-seg"/>
 		</div>
 
 		<div class="sliderGroup">
@@ -59,6 +59,12 @@
 			<p class="sliderDesc">Offset</p>
 			<input id="ex3" data-slider-id='ex3Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="40" data-slider-id="S-Offset"/>
 		</div>
+
+		<div class="sliderGroup">
+			<p class="sliderDesc">Stair Length</p>
+			<input id="ex4" data-slider-id='ex4Slider' type="text" data-slider-min="0" data-slider-max="50" data-slider-step=".5" data-slider-value="33" data-slider-id="S-Offset"/>
+		</div>
+
 	</div>
 
 	<div id="date">
