change updateHyperboloid to reorienting rather than rebuilding

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Infant|Cormorant+Unicase:600" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lora:400i,700" rel="stylesheet">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
@@ -47,7 +49,7 @@
 	<div id="sliders" class="noSelect  fadeJ">
 		<div class="sliderGroup">
 			<p class="sliderDesc">Number of Segments</p>
-			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-slider-id="S-seg"/>
+			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-slider-id="S-seg" data-slider-enabled="false"/>
 		</div>
 
 		<div class="sliderGroup">
@@ -76,8 +78,11 @@
 			<h1>Hyperboloidal Motion</h1>
 			<h6>Fall 2011 | Harvard GSD | Instructor Cameron Wu</h6>
 			<h6>In Progress: Refresh page to improve perfomance</h6>
+			<p id="memoryCounter"></p>
 		</div>
 	</div>
+
+
 	
 	<div id="canvasPlaceholder"></div>
 	
