add stair end pt function back in

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 	</div>
 
 	<div id="sliders" class="noSelect  fadeJ">
-		<div class="sliderGroup">
-			<p class="sliderDesc">Number of Segments</p>
-			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-slider-id="S-seg" data-slider-enabled="false"/>
-		</div>
+	<!-- 	<div class="sliderGroup">
+			<p class="sliderDesc">Height</p>
+			<input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-slider-id="S-seg"/>
+		</div> -->
 
 		<div class="sliderGroup">
 			<p class="sliderDesc">Top rotation</p>
