remove icons and title for portfolio site

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
 
 <body>
 
-	<div id="navbar">
-		<a href= "http://jimperaino.com/">
+	<!--<div id="navbar">
+		 <a href= "http://jimperaino.com/">
 			<img id="icon" src="assets/jpLogoWhite.png" alt="Jim Peraino Logo" style="width:72px;height:72px">
 		</a>
 
-		<!-- <div id="scrollNotice" class="noSelect">
+		<div id="scrollNotice" class="noSelect">
 			<p>Scroll</p>
 			<p><span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></p>
-		</div> -->
+		</div>
 
-	</div>
+	</div> -->
 
 	<div id="sliders" class="noSelect fadeJ">
 	<!-- 	<div class="sliderGroup">
@@ -81,9 +81,10 @@
 	</div>
 
 
-	
 	<div id="canvasPlaceholder"></div>
 	
+	<div id="section">
+	</div>
 
 	<div>
 	</div>
