remove titles for portfolio site

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<p><span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></p>
 		</div>
 
-	</div> -->
+	</div>-->
 
 	<div id="sliders" class="noSelect fadeJ">
 	<!-- 	<div class="sliderGroup">
@@ -69,16 +69,16 @@
 
 	</div>
 
-	<div id="date">
+	<!--<div id="date">
 		<p id="crDate"><i>Copyright &#169  " + year + " Jim Peraino. All rights reserved.</i></p> 
-	</div>
+	</div> -->
 
-	<div id="interface" class="noSelect">
+	<!--<div id="interface" class="noSelect">
 		<div id="title-block">
 			<h1>Hyperboloidal Motion</h1>
 			<h6>Fall 2011 | Harvard GSD | Instructor Cameron Wu</h6>
 		</div>
-	</div>
+	</div>-->
 
 
 	<div id="canvasPlaceholder"></div>
